# Investigo

./: '  :w  README.md  index.html  package-lock.json  package.json
.github/workflows/: deploy.yaml  hello_world.yaml  testing.yaml
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/authentication/: mod.rs
src-tauri/src/database/: case.rs  mod.rs  models.rs
src/Menus/: MenuAudio.svelte  MenuImage.svelte
src/Modals/: ChatModal.svelte  DocumentationModal.svelte  EnvoyerModal.svelte  InfoModal.svelte  NewFolderModal.svelte  ParameterModal.svelte  PhotoModal.svelte  PreviewModal.svelte  PrintModal.svelte  RequeteModal.svelte  ReseauxModal.svelte  SearchModal.svelte  SinglePhotoModal.svelte  UpdateModal.svelte
src/Notification/: Notification.svelte
src/Templates/: Devis.svelte  Facture.svelte  Mandat.svelte  Photos.svelte  Rapport.svelte  TemplateFooter.svelte  TemplateHeader.svelte
src/lib/: Editor.svelte  Header.svelte  Home.svelte  Main.svelte  MainBar.svelte  Menu.svelte  Modal.svelte  Sidebar.svelte
src/scripts/: dnd.js  menu.js  modal.js  searchModal.js
src/stores/: dossier.js  folder.js  menu.js  notifications.js  photos.js  search.js  sidebar.js
src/types/: types.ts
