[package]
name = "tauri-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["Henga"]
license = "MIT"
repository = "github.com/GaryHY/Investigo"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.8.0"
rusqlite = "0.31.0"
thiserror = "1.0.58"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
